revised title card

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Works | Louis Goldford</title>
+		<title>Defense Slides</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -42,7 +42,7 @@
 						<span>D</span>
 					  </div>
 					  <div class="velodroma-superwide-salt words word-2 r-fit-text">
-						<span>w</span>
+						<!-- <span>w</span>
 						<span>o</span>
 						<span>R</span>
 						<span>K</span>
@@ -51,18 +51,22 @@
 						<span>2</span>
 						<span>0</span>
 						<span>2</span>
-						<span>3</span>
+						<span>3</span> -->
+						<span>E</span>
+						<span>m</span>
+						<span>e</span>
+						<span>r</span>
+						<span>g</span>
+						<span>e</span>
+						<span>n</span>
+						<span>c</span>
+						<span>e</span>
+						</div>
 					  </div>
 
-					  <!-- class="hero glitch layers" -->
-					  <!-- <div class="hero-container">
-						<div class="environment">
-							<h2 class="--onum hero glitch layers" data-text="University of Illinois — Composition Colloquium — September 27, 2023" style="font-size: 0.5em; line-height: 0%;"><span>University of Illinois — Composition Colloquium — September 27, 2023</span></h2>
-
-						</div>
-					  </div> -->
 					<div id="glitchy-date">
-						<p class="--onum hero glitch layers movement paths" data-text="University of Illinois — Composition Colloquium — September 27, 2023">University of Illinois — Composition Colloquium — September 27, 2023</p>
+						<p class="--onum hero glitch layers movement paths" data-text="in the Music of Pierluigi Billone and Georges Aperghis">in the Music of Pierluigi Billone and Georges Aperghis</p>
+						<p class="--onum hero glitch layers movement paths" data-text="Columbia University — Dissertation Defense — November 15, 2023">Columbia University — Dissertation Defense — November 15, 2023</p>
 					</div>
 
 					<div id="div-logos" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; align-items: center;">
