--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<span>n</span>
 						<span>c</span>
 						<span>e</span>
-						</div>
+						<!-- </div> -->
 					  </div>
 
 					<div id="glitchy-date">
