--- a/index.html
+++ b/index.html
@@ -42,16 +42,6 @@
 						<span>D</span>
 					  </div>
 					  <div class="velodroma-superwide-salt words word-2 r-fit-text">
-						<!-- <span>w</span>
-						<span>o</span>
-						<span>R</span>
-						<span>K</span>
-						<span>s</span>
-						<span>—</span>
-						<span>2</span>
-						<span>0</span>
-						<span>2</span>
-						<span>3</span> -->
 						<span>E</span>
 						<span>m</span>
 						<span>e</span>
@@ -61,11 +51,10 @@
 						<span>n</span>
 						<span>c</span>
 						<span>e</span>
-						<!-- </div> -->
 					  </div>
 
 					<div id="glitchy-date">
-						<p class="--onum hero glitch layers movement paths" data-text="in the Music of Pierluigi Billone and Georges Aperghis">in the Music of Pierluigi Billone and Georges Aperghis</p>
+						<h6 class="--onum hero glitch layers movement paths" data-text="in the Music of Pierluigi Billone and Georges Aperghis">in the Music of Pierluigi Billone and Georges Aperghis</h6>
 						<p class="--onum hero glitch layers movement paths" data-text="Columbia University — Dissertation Defense — November 15, 2023">Columbia University — Dissertation Defense — November 15, 2023</p>
 					</div>
 
