+multichannel seq video

--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
 						...
 					</aside>
 				</section>
+
+			</section>
+			
+			<section data-background-video="./assets/video/avis09.seq15.v02a.trimmed.mov">
+			<!-- <section data-background-gradient="radial-gradient(#F8EFE0, #888C1E)"></section> -->
+			</section>
+
+
+
+
+
 				<section data-auto-animate data-background-gradient="radial-gradient(#f7f2d3, #F0BE4F)">
 					<figure id="gma" style="position: fixed; top: 0px; right: 0px;">
 						<img src="./assets/img/me.and.grandma.piano.jpg" alt="me-and-grandma" width="400px" style="background:none; border:none; box-shadow:none;">
