--- a/index.html
+++ b/index.html
@@ -73,34 +73,64 @@
 					</aside>
 
 				</section>
-				<!-- <section>
-					<h3 style="font-size: 100%;">Header Idea No. 3</h3>
-					<p class="--onum --dlig">v|^ /> -> |_> |v |^ <-> <_| <\ <- ^|v <br> This is a paragraph 1234567890!</p>
-					<p class="--ss05">⓿ ❶ ❷ ❸ ❹ ❺ ❻ ❼ ❽ ❾ <br> 🄋 ➀ ➁ ➂ ➃ ➄ ➅ ➆ ➇ ➈</p>
-				</section> -->
-				<!-- <section>
-					<h3 style="font-size: 100%;">Header Idea No. 3</h3>
-					<p class="--onum">This is a paragraph 1234567890!</p>
-					<p class="--ss05">⓿ ❶ ❷ ❸ ❹ ❺ ❻ ❼ ❽ ❾ <br> 🄋 ➀ ➁ ➂ ➃ ➄ ➅ ➆ ➇ ➈</p>
-				</section> -->
-				<!-- 2. Biographical highlights -->
-				<section data-auto-animate>
-					<figure id="gma" style="position: fixed; top: 0px; left: 0px;">
-						<img src="./assets/img/me.and.grandma.piano.jpg" alt="me-and-grandma" width="600px" style="background:none; border:none; box-shadow:none;">
-					</figure>
-					<h3 style="position: fixed; top: -1000px; left: 0px;">bio</h3>
-					<aside class="notes">
-						...
-					</aside>
-				</section>
 
-			</section>
-			
-			<section data-background-video="./assets/video/avis09.seq15.v02a.trimmed.mov">
-			<!-- <section data-background-gradient="radial-gradient(#F8EFE0, #888C1E)"></section> -->
+			<section>
+				<div style="position: absolute; left: 0px;">
+					<h5>Avis 6</h5>
+					<h6>Dramaturgy</h6>
+					<p style="font-size: smaller;"><em>discussion pp. 62-63</em></p>
+				</div>
 			</section>
 
+			<section data-background-video="./assets/video/avis6.v02.mov"></section>
 
+			<section>
+				<div style="position: absolute; left: 0px;">
+					<h5>Avis 4 / Sequence 9</h5>
+					<h6>Maquette Analysis</h6>
+					<p style="font-size: smaller;"><em>discussion pp. 89-90</em></p>
+				</div>
+			</section>
+
+			<section data-background-video="./assets/video/avis04.seq09.clouds.v01.mov"></section>
+
+			<section>
+				<div style="position: absolute; left: 0px;">
+					<h5>Avis 9 / Sequence 15</h5>
+					<h6>Maquette Analysis</h6>
+					<p style="font-size: smaller;"><em>discussion pp. 71-74</em></p>
+				</div>
+			</section>
+
+			<section data-background-video="./assets/video/avis09.seq15.v02a.trimmed.mov"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part1-1.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part1-2.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part2-1.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part2-2.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part3-1.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part3-2.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part4-1.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part4-2.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part5-1.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part5-2.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part6-1.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part6-2.png"></section>
+
+			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part7.png"></section>
+
+			<section data-background-video="./assets/video/avis09.seq15.v02a.trimmed.mov"></section>
 
 
 
