--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<div style="position: absolute; left: 0px;">
 					<h5>Avis 6</h5>
 					<h6>Dramaturgy</h6>
-					<p style="font-size: smaller;"><em>discussion pp. 62-63</em></p>
+					<p class="--onum" style="font-size: smaller;"><em>discussion pp. 62-63</em></p>
 				</div>
 			</section>
 
@@ -88,7 +88,7 @@
 				<div style="position: absolute; left: 0px;">
 					<h5>Avis 4 / Sequence 9</h5>
 					<h6>Maquette Analysis</h6>
-					<p style="font-size: smaller;"><em>discussion pp. 89-90</em></p>
+					<p class="--onum" style="font-size: smaller;"><em>discussion pp. 89-90</em></p>
 				</div>
 			</section>
 
@@ -98,7 +98,7 @@
 				<div style="position: absolute; left: 0px;">
 					<h5>Avis 9 / Sequence 15</h5>
 					<h6>Maquette Analysis</h6>
-					<p style="font-size: smaller;"><em>discussion pp. 71-74</em></p>
+					<p class="--onum" style="font-size: smaller;"><em>discussion pp. 71-74</em></p>
 				</div>
 			</section>
 
@@ -118,6 +118,17 @@
 
 			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part4-1.png"></section>
 
+			<section>
+				<h6>“churning” of digital “glitch” sounds</h6>
+				<ul class="--onum" style="font-size: 0.65em;">
+					<li class="fragment">in channels 5 and 6</li>
+					<li class="fragment">changes character after the first 10 seconds</li>
+					<li class="fragment">0:10: spectrally high/thin filtering, short, impulsive grains in mid-high register</li>
+					<li class="fragment">0:15: time-stretched and transposed down into a low register</li>
+					<li class="fragment">Changes in all 3 layers <em>“refract”</em> the material such that a <b>fusion of rotational movement is perceptually lost</b>.</li>
+				</ul>
+			</section>
+
 			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part4-2.png"></section>
 
 			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part5-1.png"></section>
@@ -130,7 +141,30 @@
 
 			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part7.png"></section>
 
+			<section>
+				<h6>“thin” episodes</h6>
+				<p class="--onum" style="font-size: 0.65em;">[...] the basic character of each sound is refracted due to a change in the temporal profile of the source, which <b>obscures the original sensation of motion by altering the grain rate</b>.</p>
+			</section>
+
 			<section data-background-video="./assets/video/avis09.seq15.v02a.trimmed.mov"></section>
+
+			<section>
+				<h6>not a “gestalt...”</h6>
+				<p class="--onum" style="font-size: 0.65em;">...but an <em>emergent phenomenon</em> (<em>property</em>, or <em>quality</em>) of rotational motion</p>
+			</section>
+
+			<section>
+				<h6>quality vs. form</h6>
+				<p class="--onum fragment" style="font-size: 0.65em;">any quality (whose intensity can be defined through computation) can form the basis of form in music, in that <b>its flux over time can be interpreted as form</b>.</p>
+				<p class="--onum fragment" style="font-size: 0.65em;">[...] contrary to the assumption that there is a small fixed set of quantitative dimensions in music, [...] there are <b>innumerable quantifiable qualities</b> whose flux of intensity bears form in music.</p>
+				<p class="--onum fragment" style="font-size: 0.65em;">—Joshua Banks Mailman, <em>Temporal Dynamic Form in Music</em>, vii.</p>
+			</section>
+
+
+
+
+
+
 
 
 
