--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
 
 			<section>
 				<div style="position: absolute; left: 0px;">
-					<h5>Avis 6</h5>
 					<h6>Dramaturgy</h6>
-					<p class="--onum" style="font-size: smaller;"><em>discussion pp. 62-63</em></p>
+					<h5>Avis 6</h5>
+					<h6>mm. 457, score p. 133</h6>
+					<p class="--onum" style="font-size: smaller;"><em>discussion (dissertation) pp. 62-63</em></p>
+					<p class="--onum" style="font-size: 0.55em;"><em>Source: Georges Aperghis + Emilie Morin</em></p>
 				</div>
 			</section>
 
@@ -123,9 +125,9 @@
 				<ul class="--onum" style="font-size: 0.65em;">
 					<li class="fragment">in channels 5 and 6</li>
 					<li class="fragment">changes character after the first 10 seconds</li>
-					<li class="fragment">0:10: spectrally high/thin filtering, short, impulsive grains in mid-high register</li>
-					<li class="fragment">0:15: time-stretched and transposed down into a low register</li>
-					<li class="fragment">Changes in all 3 layers <em>“refract”</em> the material such that a <b>fusion of rotational movement is perceptually lost</b>.</li>
+					<li class="fragment">0:10 — spectrally high/thin filtering, short, impulsive grains in mid-high register</li>
+					<li class="fragment">0:15 — time-stretched and transposed down into a low register</li>
+					<!-- <li class="fragment"></li> -->
 				</ul>
 			</section>
 
@@ -143,7 +145,10 @@
 
 			<section>
 				<h6>“thin” episodes</h6>
-				<p class="--onum" style="font-size: 0.65em;">[...] the basic character of each sound is refracted due to a change in the temporal profile of the source, which <b>obscures the original sensation of motion by altering the grain rate</b>.</p>
+				<p class="--onum fragment" style="font-size: 0.65em;">e.g., 0:10-0:31 — all 3 layers <em>“refract”</em> their material such that a <b>fusion into the percept of rotational movement is temporarily lost</b>.</p>
+				<p class="--onum fragment" style="font-size: 0.65em;">“[...] the basic character of each sound is refracted due to a change in the temporal profile of the source, which <b>obscures the original sensation of motion by altering the grain rate</b>.” (74)</p>
+				<p class="--onum fragment" style="font-size: 0.55em;"><em>Want to hear it again? Next slide...</em></p>
+
 			</section>
 
 			<section data-background-video="./assets/video/avis09.seq15.v02a.trimmed.mov"></section>
@@ -155,8 +160,9 @@
 
 			<section>
 				<h6>quality vs. form</h6>
-				<p class="--onum fragment" style="font-size: 0.65em;">any quality (whose intensity can be defined through computation) can form the basis of form in music, in that <b>its flux over time can be interpreted as form</b>.</p>
-				<p class="--onum fragment" style="font-size: 0.65em;">[...] contrary to the assumption that there is a small fixed set of quantitative dimensions in music, [...] there are <b>innumerable quantifiable qualities</b> whose flux of intensity bears form in music.</p>
+				<p class="--onum fragment" style="font-size: 0.65em;">“any quality (whose intensity can be defined through computation) can form the basis of form in music, in that <b>its flux over time can be interpreted as form</b>.</p>
+				<p class="--onum fragment" style="font-size: 0.65em;">“[...] contrary to the assumption that there is a small <br>fixed set of quantitative dimensions [...]</p> 
+				<p class="--onum fragment" style="font-size: 0.65em;">“there are <b>innumerable quantifiable qualities</b> <br>whose flux of intensity bears form in music.”</p>
 				<p class="--onum fragment" style="font-size: 0.65em;">—Joshua Banks Mailman, <em>Temporal Dynamic Form in Music</em>, vii.</p>
 			</section>
 
