--- a/index.html
+++ b/index.html
@@ -144,6 +144,30 @@
 			<section data-transition="none" data-background-image="./assets/img/goldford.aperghis.v01a.no.headers_Part7.png"></section>
 
 			<section>
+				<h6>fusion of texture</h6>
+				<p class="--onum fragment" style="font-size: 0.65em;">Not a fusion of pure <em>frequencies</em> or <em>timbres</em>, in the classic sense,</p>
+				<p class="--onum fragment" style="font-size: 0.65em;">but a <em>blending</em> or <em>melting</em> of <b>temporal features</b> too:</p>
+			</section>
+
+			<section>
+				<h6>fusion of texture</h6>
+				<ul class="--onum" style="font-size: 0.65em;">
+					<li class="fragment">clock rates</li>
+					<li class="fragment">“waves”</li>
+					<li class="fragment">“peaks” yielding a sensation of Doppler shift (MiM)</li>
+					<li class="fragment">periodicity of amplitude: e.g., implied metrical accents</li>
+				</ul>
+			</section>
+
+			<section>
+				<h6>fusion of texture</h6>
+				<p class="--onum fragment" style="font-size: 0.65em;">Once a <b>periodicity between constituents</b> has been established,</p>
+				<p class="--onum fragment" style="font-size: 0.65em;">and when amplitude “peaks” fall out of sync,</p> 
+				<p class="--onum fragment" style="font-size: 0.65em;">or streams of “particles” are transposed into a new frequency range,</p>  
+				<p class="--onum fragment" style="font-size: 0.65em;">an emergent property quickly <b>evaporates</b>.</p>
+			</section>
+
+			<section>
 				<h6>“thin” episodes</h6>
 				<p class="--onum fragment" style="font-size: 0.65em;">e.g., 0:10-0:31 — all 3 layers <em>“refract”</em> their material such that a <b>fusion into the percept of rotational movement is temporarily lost</b>.</p>
 				<p class="--onum fragment" style="font-size: 0.65em;">“[...] the basic character of each sound is refracted due to a change in the temporal profile of the source, which <b>obscures the original sensation of motion by altering the grain rate</b>.” (74)</p>
