revisions last minute

--- a/index.html
+++ b/index.html
@@ -190,15 +190,20 @@
 				<p class="--onum fragment" style="font-size: 0.65em;">—Joshua Banks Mailman, <em>Temporal Dynamic Form in Music</em>, vii.</p>
 			</section>
 
+			<!-- <section>
+				<h6>quality vs. form</h6>
+				<p class="--onum fragment" style="font-size: 0.65em;">“<b>Any combination</b> of these [audio] descriptors may be analyzed <br>and used to train or match audio sources via a HHMM.” (82)</p>
+			</section> -->
+
 			<section>
 				<h6>vorticity / rotational movement</h6>
 				<!-- <h6 style="font-size: 0.45em;">assumptions based on Cohen + Dubnov</h6> -->
 				<ul class="--onum" style="font-size: 0.65em;">
-					<li class="fragment">rotational movement is an emergent phenomenon</li>
-					<li class="fragment">represents some union between a texture and a timbre</li>
-					<li class="fragment">Timbre is perceivably indivisible; we don’t hear constituent “particles”</li>
-					<li class="fragment">Texture is divisible: we hear its constituents, but it may not be quantitatively well-defined (i.e. along a temporal or rhythmic axis)</li>
-					<li class="fragment">borderline states between texture/timbre: features may converge to define a quality, but may not be entirely measurable or divisible</li>
+					<li class="fragment">rotational movement is an <b>emergent phenomenon</b></li>
+					<li class="fragment">which represents some union between a <b>texture</b> and a <b>timbre</b></li>
+					<li class="fragment">Timbre is perceivably <b>indivisible</b> and quantitatively <b>precise</b>: <br>i.e., we do not hear constituent frequencies apart from a whole</li>
+					<li class="fragment">Texture is <b>divisible</b> but it is quantitatively <b>imprecise</b>: <br>i.e., we do hear constituent “particles”</li>
+					<li class="fragment"><b>borderline states</b> between texture/timbre: features may converge or cluster around a perceived quality, but may not be entirely measurable or divisible</li>
 				</ul>
 			</section>
 
